Add initial CSS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,16 @@
     <link href="styles/styles.css" rel="stylesheet" />
     <title>Algorithm Visualizer</title>
 </head>
+
 <body>
-    
+    <div class="main">
+        <section class="menu-section">
+        </section>
+        <section class="canvas-section">
+            <canvas width="800" height="400"></canvas>
+        </section>
+    </div>
 </body>
 <script src="modules/scripts.js"></script>
+
 </html>
