Add canvas boilerplate script

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         </section>
     </div>
 </body>
-<script src="modules/scripts.js"></script>
-
+<script src="modules/scripts.js" type="module"></script>
+<script src="modules/utils.js" type="module"></script>
 </html>
