--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <div class="main">
         <section class="menu-section">
-            <h1>Algorithm Visualizer</h1>
+            <h1 class="title">Algorithm Visualizer</h1>
             <section class="button-section">
-                <button id="btn-1" class="btn">Algo 1</button>
-                <button id="btn-2" class="btn">Algo 2</button>
-                <button id="btn-3" class="btn">Algo 3</button>
-                <button id="btn-4" class="btn">Algo 4</button>
-                <button id="btn-5" class="btn">Algo 5</button>
+                <button id="btn-1" class="btn">Selection Sort</button>
+                <button id="btn-2" class="btn">Insertion Sort</button>
+                <button id="btn-3" class="btn">Bubble Sort</button>
+                <button id="btn-4" class="btn">Merge Sort</button>
+                <button id="btn-5" class="btn">Quick Sort</button>
             </section>
         </section>
         <section class="canvas-section">
