--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 <div class="range">
                     <div class="slider-details">
                         <p class="freq-title">Frequency</p>
-                        <div id="freq-value" class="freq-value">10</div>
+                        <div id="freq-value" class="freq-value">120</div>
                     </div>
-                    <input id="freq" type="range" min="10" max="200" step="10">
+                    <input id="freq" type="range" min="10" max="200" step="10" value="120">
                 </div>
                 <div class="range">
                     <div class="slider-details">
                         <p class="speed-title">Speed</p>
-                        <div id="speed-value" class="speed-value">0.01</div>
+                        <div id="speed-value" class="speed-value">0.8</div>
                     </div>
-                    <input id="speed" type="range" min="0.01" max="1" step="0.01">
+                    <input id="speed" type="range" min="0.01" max="1" step="0.01" value="0.8">
                 </div>
                 <button id="start-btn" class="start-btn">Start</button>
             </section>
